--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -20,7 +20,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.GH_TOKEN }}
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -28,8 +28,8 @@ jobs:
     - name: Build and push web-img
       uses: docker/build-push-action@v5
       with:
-        context: /addons/gst-web
-        file: Dockerfile
+        context: ./addons/gst-web
+        file: ./addons/gst-web/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/jeevops-web-img:latest
     
